@@ -2,6 +2,8 @@
 Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
 - 24/04/2023
 01. error.c, error.h: fixed error code numbering
+- 19/05/2023
+02. libqmail.spec.in: updated SPEC post fedora review
 
 * Sun Apr 23 2023 16:55:15 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
 Release 1.1.3-1.1 Start 08/02/2023 End 23/04/2023
